<resources>
    <string name="app_name">Cyclos</string>
    <string name="workout_add">Add</string>
    <string name="stop">Stop</string>
    <string name="delete">Delete</string>
    <string name="exporting">Exporting</string>
    <string name="error">Error</string>
    <string name="errorGpxExportFailed">The GPX export has failed.</string>
    <string name="errorExportFailed">The data export has failed.</string>
    <string name="errorImportFailed">The data import has failed.</string>
    <string name="shareFile">Share file</string>
    <string name="initialising">Initialising</string>
    <string name="preferences">Preferences</string>
    <string name="workouts">Workouts</string>
    <string name="locationData">Location data</string>
    <string name="converting">Converting</string>
    <string name="finished">Finished</string>
    <string name="loadingFile">Loading file</string>
    <string name="chooseBackupFile">Choose Backup-File</string>
    <string name="importBackupMessage">WARNING: All your existing data in the app will be cleared. If you don\'t want to loose them, first take another backup. Are you sure, you want to restore this backup?</string>
    <string name="restore">Restore</string>
    <string name="backup">Backup</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="setPreferencesTitle">Set Preferences</string>
    <string name="setPreferencesMessage">You can set your preferred unit system and your weight in the settings.</string>
    <string name="timeMinuteSingular">Minute</string>
    <string name="timeMinutePlural">Minutes</string>
    <string name="timeMinuteShort">min</string>
    <string name="timeHourSingular">Hour</string>
    <string name="timeHourPlural">Hours</string>
    <string name="timeHourShort">h</string>
    <string name="timeSecondsShort">s</string>
    <string name="and">and</string>
    <string name="errorEnterValidNumber">Enter a valid number</string>
    <string name="errorWorkoutAddFuture">The workout cannot be in the future</string>
    <string name="errorEnterValidDuration">Enter a valid duration</string>
    <string name="announcementGPSStatus">GPS Status</string>
    <string name="announcementWorkoutActions">Workout Actions (pause, resume, etc.)</string>
    <string name="voiceAnnouncementsTitle">Voice Announcements</string>
    <string name="pref_voice_announcements_summary">Configure voice prompts that inform you during the workout</string>
    <string name="pref_announcements_config_title">Announcement Trigger</string>
    <string name="pref_announcements_config_summary">Choose the time and distance between voice announcements</string>
    <string name="pref_announcements_content">Content of the announcements</string>
    <string name="gpsLost">GPS signal lost</string>
    <string name="gpsFound">GPS signal found</string>
    <string name="workoutTime">Time</string>
    <string name="workoutDate">Date</string>
    <string name="workoutDuration">Duration</string>
    <string name="workoutPauseDuration">Pause Duration</string>
    <string name="workoutStartTime">Start Time</string>
    <string name="workoutEndTime">End Time</string>
    <string name="workoutDistance">Distance</string>
    <string name="workoutPace">Pace</string>
    <string name="workoutRoute">Route</string>
    <string name="workoutSpeed">Speed</string>
    <string name="workoutAvgSpeedShort">Avg. Speed</string>
    <string name="workoutAvgSpeedLong">Average Speed</string>
    <string name="workoutTopSpeed">Top Speed</string>
    <string name="workoutBurnedEnergy">Burned Energy</string>
    <string name="workoutTotalEnergy">Total Energy</string>
    <string name="workoutEnergyConsumption">Energy Consumption</string>
    <string name="workoutHeartRate">Heart Rate</string>
    <string name="workoutMaxHeartRate">Max Heart Rate</string>
    <string name="workoutAvgHeartRate">Avg. Heart Rate</string>
    <string name="workoutEdited">This workout has been edited.</string>
    <string name="uploading">Uploading</string>
    <string name="enterVerificationCode">Enter Verification Code</string>
    <string name="authenticationFailed">Authentication failed.</string>
    <string name="upload">Upload</string>
    <string name="uploadSuccessful">Upload Successful</string>
    <string name="uploadFailed">Upload Failed</string>
    <string name="uploadFailedOsmNotAuthorized">Not authorized, try again</string>
    <string name="workoutAscent">Ascent</string>
    <string name="workoutDescent">Descent</string>
    <string name="height">Height</string>
    <string name="workoutTypeRunning">Running</string>
    <string name="workoutTypeWalking">Walking</string>
    <string name="workoutTypeJogging">Jogging</string>
    <string name="workoutTypeCycling">Cycling</string>
    <string name="workoutTypeHiking">Hiking</string>
    <string name="workoutTypeSkateboarding">Skateboarding</string>
    <string name="workoutTypeInlineSkating">Inline Skating</string>
    <string name="workoutTypeRowing">Rowing</string>
    <string name="workoutTypeOther">Other</string>
    <string name="workoutTypeUnknown">Unknown</string>
    <string name="workoutTypeAdd">Add</string>
    <string name="workoutTypeAll">All</string>
    <string name="type">Type</string>
    <string name="enterWorkout">Enter Workout</string>
    <string name="importWorkout">Import Workout</string>
    <string name="setDuration">Set Duration</string>
    <string name="recordWorkout">Record Workout</string>
    <string name="noGpsTitle">GPS disabled</string>
    <string name="noGpsMessage">Please enable GPS for tracking your workout.</string>
    <string name="enable">Enable</string>
    <string name="comment">Comment</string>
    <string name="enterComment">Enter Comment</string>
    <string name="okay">Okay</string>
    <string name="stopRecordingQuestion">Stop Recording?</string>
    <string name="stopRecordingQuestionMessage">Do you really want to stop the recording?</string>
    <string name="continue_">Continue</string>
    <string name="deleteWorkout">Delete Workout</string>
    <string name="deleteWorkoutMessage">Do you really want to delete the workout?</string>
    <string name="trackerRunning">Tracker is running</string>
    <string name="trackerRunningMessage">Your workout is being recorded</string>
    <string name="trackerWaitingMessage">Waiting to start workout</string>
    <string name="trackingInfo">Tracking Info</string>
    <string name="trackingInfoDescription">Info about the tracker running</string>
    <string name="cancel">Cancel</string>
    <string name="exportAsGpxFile">Export as GPX-File</string>
    <string name="pref_weight">Your Weight</string>
    <string name="pref_weight_summary">Your weight is needed to calculate the burned calories</string>
    <string name="pref_unit_system">Preferred system of units</string>
    <string name="settings">Settings</string>
    <string name="exportData">Export Data</string>
    <string name="exportDataSummary">This takes a backup of all workouts</string>
    <string name="importBackup">Import Data Backup</string>
    <string name="importBackupSummary">Restore a taken backup</string>
    <string name="gps">GPS</string>
    <string name="data">Data</string>
    <string name="mapStyle">Map Style</string>
    <string name="waiting_gps">Waiting for GPS</string>
    <string name="actionUploadToOSM">Upload to OSM</string>
    <string name="cut">Cut the first/last 300 Meters</string>
    <string name="trackVisibilityPref">Track Visibility</string>
    <string name="description">Description</string>
    <string name="ttsNotAvailable">TextToSpeech is not available</string>
    <string name="action_edit_comment">Edit Comment</string>
    <string-array name="pref_announcement_mode">
        <item>Always</item>
        <item>Only on headphones</item>
    </string-array>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="savedSuccessfully">Saved</string>
    <string name="savingFailed">Saving failed</string>
    <string name="info">Info</string>
    <string name="OpenStreetMapAttribution">© OpenStreetMap contributors</string>
    <string name="theme">Theme</string>
    <string name="hintRestart">Please restart the app to apply changes</string>
    <string name="noComment">No comment</string>
    <string name="start">Start</string>
    <string name="cannotStart">Cannot start</string>
    <string name="add">Add</string>
    <string name="add_interval">Add Interval</string>
    <string name="manageIntervalSets">Manage Interval Sets</string>
    <string name="manageIntervalsSummary">Edit the interval sets you will be able to use during the workout using voice feedback.</string>
    <string name="workoutRecording">Workout Recording</string>
    <string name="createIntervalSet">Create New Interval Set</string>
    <string name="create">Create</string>
    <string name="hintManageIntervalSets">Add an interval set to use it in your workouts.</string>
    <string name="hintEditIntervalSet">Add intervals that will be spoken.</string>
    <string name="interval_name">Name:</string>
    <string name="length_in_minutes">Duration (minutes):</string>
    <string name="enterName">Enter a name</string>
    <string name="deleteIntervalSet">Delete Interval Set</string>
    <string name="deleteIntervalSetMessage">Do you want to delete the interval set?</string>
    <string name="selectIntervalSet">Select Interval Set</string>
    <string name="intervalSetSelected">Interval Set selected</string>
    <string name="intervalsIncludePauseTitle">Include Pause Time in Interval Training</string>
    <string name="intervalsIncludePauseSummary">If activated, the intervals will continue even if you do pauses in your workout.</string>
    <string name="intervalTraining">Interval Training</string>
    <string name="intervalSet">Interval Set</string>
    <string name="intervalSets">Interval Sets</string>
    <string name="currentSpeed">Current Speed</string>
    <string name="hintAddWorkout">Click on the plus icon to record or enter a workout.</string>
    <string name="enterDescription">Enter a description</string>
    <string name="avgSpeedInMotion">Avg. Speed (in Motion)</string>
    <string name="avgSpeedTotalShort">Avg. Speed (Total)</string>
    <string name="avgSpeedTotalLong">Average Speed in total</string>
    <string name="preferencesUserInterfaceTitle">User Interface</string>
    <string name="preferencesUserInterfaceSummary">Personalize the app</string>
    <string name="preferencesRecordingTitle">Recording</string>
    <string name="preferencesRecordingSummary">Manage the workout recording</string>
    <string name="preferencesCategoryAppearance">Appearance</string>
    <string name="preferenceDateFormat">Date Format</string>
    <string name="preferenceTimeFormat">Time Format</string>
    <string name="pref_energy_unit">Energy unit</string>
    <string name="manageAutoTimeoutSummary">Edit the interval for automatic workout stop</string>
    <string name="intervalAutoTimeoutTraining">Auto Workout Timeout</string>
    <string name="currentTime">Current Time</string>
    <string name="announcementSuppressDuringCall">Suppress during call</string>
    <string name="speedLastMinute">Avg. Speed (Last Minute)</string>
    <string name="connectHeartRateDevice">Connect heart rate device</string>
    <string name="resumeWorkout">Resume Workout</string>
    <string name="autoPauseTitle">Auto pause</string>
    <string name="autoPauseSummary">Automatically pause and continue workouts</string>
    <string name="actionPause">Pause</string>
    <string name="prefShowOnLockScreenTitle">Visible on lock screen</string>
    <string name="prefShowOnLockScreenSummary">Show workout information even if the phone is locked.</string>
    <string name="preferenceCategoryVoiceFeedback">Voice feedback</string>
    <string name="pref_map_file">Offline Map Directory</string>
    <string name="downloadMapsTitle">Download Maps</string>
</resources>