<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 Gabriel Estrada <dev@getcyclos.com>
  ~
  ~ This file is part of CyclosApp
  ~
  ~ CyclosApp is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     CyclosApp is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="autoPause"
        android:summary="@string/autoPauseSummary"
        android:title="@string/autoPauseTitle" />

    <Preference
        android:key="autoTimeoutConfig"
        android:summary="@string/manageAutoTimeoutSummary"
        android:title="@string/intervalAutoTimeoutTraining" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="showOnLockScreen"
        android:summary="@string/prefShowOnLockScreenSummary"
        android:title="@string/prefShowOnLockScreenTitle" />

    <PreferenceCategory android:title="@string/preferenceCategoryVoiceFeedback">

        <Preference
            android:key="speech"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/pref_voice_announcements_summary"
            android:title="@string/voiceAnnouncementsTitle" />

        <Preference
            android:key="intervals"
            android:summary="@string/manageIntervalsSummary"
            android:title="@string/intervalTraining" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="intervalsIncludePause"
            android:summary="@string/intervalsIncludePauseSummary"
            android:title="@string/intervalsIncludePauseTitle" />


    </PreferenceCategory>

</PreferenceScreen>