<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 Gabriel Estrada <dev@getcyclos.com>
  ~
  ~ This file is part of CyclosApp
  ~
  ~ CyclosApp is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     CyclosApp is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/actionResumeWorkout"
        android:title="@string/resumeWorkout" />
    <!--
        <item
            android:id="@+id/actionEditWorkout"
            android:title="@string/editWorkout" />
            -->
        <item
            android:id="@+id/actionExportGpx"
            android:title="@string/exportAsGpxFile" />
        <item
            android:id="@+id/actionUploadOSM"
            android:title="@string/actionUploadToOSM" />
        <item
            android:id="@+id/actionDeleteWorkout"
            android:title="@string/delete" />
        <item
            android:id="@+id/actionShareWorkout"
            android:title="@string/share" />
    </menu>