<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020 Gabriel Estrada <dev@getcyclos.com>
  ~
  ~ This file is part of CyclosApp
  ~
  ~ CyclosApp is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, either version 3 of the License, or
  ~     (at your option) any later version.
  ~
  ~     CyclosApp is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
<!--
    <item
        android:id="@+id/actionEditHint"
        android:icon="@drawable/ic_edit"
        android:showAsAction="always"
        android:title="@string/editDisplayedInformation" />
    <item
        android:id="@+id/actionSelectIntervalSet"
        android:icon="@drawable/ic_list"
        android:showAsAction="always"
        android:title="@string/selectIntervalSet" />
-->
    <item
        android:id="@+id/actionManualPause"
        android:icon="@drawable/ic_pause"
        android:showAsAction="ifRoom"
        android:title="@string/actionPause" />

    <item
        android:id="@+id/actionRecordingStop"
        android:showAsAction="ifRoom"
        android:title="@string/stop" />
    <item
        android:id="@+id/actionConnectHR"
        android:title="@string/connectHeartRateDevice" />
</menu>