<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/sections_layout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/sectionLengthEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd"/>
        <Spinner
            android:id="@+id/sectionLengthUnit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_gravity="center"
            android:textAppearance="@android:style/TextAppearance.Material.Small"
            android:labelFor="@id/sectionLengthEdit"/>
        <Spinner
            android:id="@+id/sectionTypeSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:layout_gravity="center"
            android:layout_weight="5" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="5dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/selectedCriterion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textAppearance="@android:style/TextAppearance.Material.Small"
            android:layout_margin="1dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            tools:text="@string/workoutDistance" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="11"
            android:id="@+id/paceSpeedText"
            android:clickable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                android:layout_margin="1dp"
                android:text="@string/workoutPace"
                android:id="@+id/selectedPaceSpeed"
                android:clickable="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                android:textColor="@android:color/darker_gray"
                android:layout_margin="1dp"
                android:text="⇌"
                android:clickable="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                android:textColor="@android:color/darker_gray"
                android:layout_margin="1dp"
                android:text="@string/workoutSpeed"
                android:id="@+id/unselectedPaceSpeed"
                android:clickable="false" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/section_list"
        android:orientation="vertical" />
</LinearLayout>